--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
                     <div class="main-page-box">
-                      <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title">Tharang/span><span class="subheading-decor">presents</span></p>
+                      <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title">Tharang</span><span class="subheading-decor">presents</span></p>
                       <h1 data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">Feel The rhythm!</h1>
                       <h1 data-swiper-parallax="-4000" data-swiper-parallax-opacity="0">Feel The night!</h1>
                       <!--hr-->
