--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <div class="page">
       <div class="main-screen">
+        <audio id="my_audio" src="bg.mp3" loop="loop"></audio>
         <h1>Tharang 2K22</h1>
         <p>click to ENTER</p>
       </div>
@@ -60,7 +61,7 @@
             </div>
           </div>
           <!--news-->
-          <div class="swiper-slide context-dark" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;News &amp; Events&lt;/span&gt;&lt;span class=&quot;fa-calendar swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
+          <div class="swiper-slide context-dark" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;News&lt;/span&gt;&lt;span class=&quot;fa-calendar swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
             <div class="parallax-scene container-screen">
               <div class="layer container-screen parallax-scene-img-height" data-depth="0.05"><img src="assets/images/news-01.jpg" alt=""></div>
             </div>
@@ -68,33 +69,14 @@
               <div class="container">
                 <div class="row row-20 justify-content-center">
                   <div class="col-md-8 col-lg-3 col-xl-4 col-xxl-3 order-lg-2" data-swiper-parallax="-1000" data-swiper-parallax-opacity="0">
-                    <div class="mt-lg-5">
-                      <h4>news <br class="d-none d-lg-inline-block">and <br class="d-none d-lg-inline-block">events</h4>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- offer-->
-          <div class="swiper-slide context-dark swiper-content-top" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Special Offer&lt;/span&gt;&lt;span class=&quot;fa-briefcase swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
-            <div class="parallax-scene container-screen">
-              <div class="layer container-screen parallax-scene-img-height" data-depth="0.05"><img src="assets/images/offer-01.png" alt=""></div>
-            </div>
-            <div class="container">
-              <div class="row text-md-left">
-                <div class="col-md-10 col-xl-7">
-                  <div class="offer-box">
-                    <!--<div class="offer-box-subheading text-md-right" data-swiper-parallax="-3000" data-swiper-parallax-opacity="0">Every Day</div>
-                    <div class="offer-box-title" data-swiper-parallax="-2000" data-swiper-parallax-opacity="0">unlimited</div>
-                    <div class="offer-box-subtitle" data-swiper-parallax="-100" data-swiper-parallax-opacity="0">karaoke </div>-->
+                    
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <!--downloads-->
-          <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Downloads&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
+          <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Events&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
             <!-- <a href="https://www.freepik.com/free-photos-vectors/mockup">Mockup psd created by Qeaql-studio - Freepik.com</a>-->
             <div class="parallax-scene container-screen">
               <div class="layer container-screen parallax-scene-img-height" data-depth="0.08"> <img src="assets/images/download-02.png" alt=""></div>
