--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
     </div>
     <div class="page">
       <div class="main-screen">
-        <audio id="my_audio" src="bg.mp3" loop="loop"></audio>
         <h1>Tharang 2K22</h1>
         <p>click to ENTER</p>
       </div>
       <!-- Swiper-->
       <section class="section swiper-container swiper-slider" data-loop="false" data-autoplay="false" data-simulate-touch="false" data-mousewheel="true" data-parallax="true">
-        <div class="parallax-bg" style="background-image:url(assets/images/background-05.jpg);" data-swiper-parallax="-23%"></div>
+        <div class="parallax-bg" style="background-image:url(assets/images/background-01.jpg);" data-swiper-parallax="-23%"></div>
         <div class="swiper-wrapper text-center">
           <!--home-->
-          <div class="swiper-slide content video-bg-overlay vide_bg" data-vide-bg="video/video-lg" data-vide-options="posterType: jpg, muted: true" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Home&lt;/span&gt;&lt;span class=&quot;fa-home swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
+          <div class="swiper-slide content " data-vide-options="posterType: jpg, muted: true" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Home&lt;/span&gt;&lt;span class=&quot;fa-home swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
             <div class="parallax-scene container-screen">
               <div class="layer container-screen container-screen-top parallax-scene-img-height parallax-scene-mobile" data-depth="0.04" style="opacity: 1; filter: blur(3px);"><img src="assets/images/home-04.png" alt=""></div>
               <div class="layer container-screen container-screen-top parallax-scene-img-height parallax-scene-mobile" data-depth="0.1" style=" filter: blur(1.5px);"><img src="assets/images/home-03.png" alt=""></div>
