--- a/index.html
+++ b/index.html
@@ -59,21 +59,6 @@
               </div>
             </div>
           </div>
-          <!--news-->
-          <div class="swiper-slide context-dark" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;News&lt;/span&gt;&lt;span class=&quot;fa-calendar swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
-            <div class="parallax-scene container-screen">
-              <div class="layer container-screen parallax-scene-img-height" data-depth="0.05"><img src="assets/images/news-01.jpg" alt=""></div>
-            </div>
-            <div class="swiper-slide-caption" data-swiper-parallax="-1000" data-swiper-parallax-opacity="0">
-              <div class="container">
-                <div class="row row-20 justify-content-center">
-                  <div class="col-md-8 col-lg-3 col-xl-4 col-xxl-3 order-lg-2" data-swiper-parallax="-1000" data-swiper-parallax-opacity="0">
-                    
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <!--downloads-->
           <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Events&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
             <!-- <a href="https://www.freepik.com/free-photos-vectors/mockup">Mockup psd created by Qeaql-studio - Freepik.com</a>-->
@@ -85,10 +70,14 @@
               <div class="layer container-screen parallax-scene-img-height" data-depth="0.22"><img src="assets/images/download-05.png" alt=""></div>
             </div>
             <div class="swiper-slide-caption" data-swiper-parallax="-1000" data-swiper-parallax-opacity="0">
-              <div class="container section-lg">
+              <div class="container section-md">
                 <div class="row justify-content-lg-center">
-                  <div class="col-lg-8">
-                    <!-- Owl Carousel-->
+                  <div class="col-lg-8 embed-responsive embed-responsive-21by9">
+                    <video muted  width="520" height="240" loop="true" autoplay="true" >
+                      <source src="./assets/music/tharang.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                    <a  href="https://theamalshibu.github.io/events-tharang/" ><button>Check Events</button></a>
                   </div>
                 </div>
               </div>
