--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8 embed-responsive embed-responsive-21by9">
                     <video muted  width="520" height="240" loop="true" autoplay="true" >
-                      <source src="./assets/music/tharang.mp4" type="video/mp4">
+                      <source src="./assets/music/Tharang.m4v" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                     <a  href="https://theamalshibu.github.io/events-tharang/" ><button>Check Events</button></a>
