--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                 <div class="row justify-content-lg-center">
                   <div class="col-lg-8">
                     <div class="main-page-box">
-                      <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title">Tharang</span><span class="subheading-decor">presents</span></p>
+                      <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title">Tharang</span><span class="subheading-decor">2K22</span></p>
                       <h1 data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">Feel The rhythm!</h1>
                       <h1 data-swiper-parallax="-4000" data-swiper-parallax-opacity="0">Feel The night!</h1>
                       <!--hr-->
@@ -59,7 +59,36 @@
               </div>
             </div>
           </div>
-          <!--downloads-->
+                    <!--events-->
+                    <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;About&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
+                      <!-- <a href="https://www.freepik.com/free-photos-vectors/mockup">Mockup psd created by Qeaql-studio - Freepik.com</a>-->
+                      <div class="parallax-scene container-screen">
+                        <div class="layer container-screen parallax-scene-img-height" data-depth="0.08"> <img src="assets/images/download-02.png" alt=""></div>
+                        <div class="layer container-screen parallax-scene-img-height" data-depth="0.05"><img src="assets/images/download-01.png" alt=""></div>
+                        <div class="layer container-screen parallax-scene-img-height" data-depth="0.35"><img src="assets/images/download-03.png" alt=""></div>
+                        <div class="layer container-screen parallax-scene-img-height" data-depth="0.15"><img src="assets/images/download-04.png" alt=""></div>
+                        <div class="layer container-screen parallax-scene-img-height" data-depth="0.22"><img src="assets/images/download-05.png" alt=""></div>
+                      </div>
+                      <div class="swiper-slide-caption section-md">
+                        <div class="container">
+                          <div class="row justify-content-lg-center">
+                            <div class="col-lg-8">
+                              <div class="main-page-box">
+                                <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title" style="color: ;">About Tharang</span><span class="subheading-decor"></span></p>
+                                <h6  style="background-color:rgb(176, 87, 231); color: black; font-weight: 500;" data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">Tharang is a largest Techno Cultural Fest conducted annually by the students
+                                  of Jyothi Engineering College, Thrissur. Tharang, since its inception, has
+                                  evolved into one of the biggest events for tech-wits and creative minds
+                                  across the state. The new edition "Tharang 2022" is not different either. The
+                                  fest brings together the latest in technology, automobiles, workshop,
+                                  games, arts, dance and music, all inside a jam packed session of two days,
+                                  april 29 & 30.</h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>  
+                    </div>
+          <!--events-->
           <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Events&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
             <!-- <a href="https://www.freepik.com/free-photos-vectors/mockup">Mockup psd created by Qeaql-studio - Freepik.com</a>-->
             <div class="parallax-scene container-screen">
@@ -102,7 +131,7 @@
         </div>
         <!-- Swiper Pagination-->
         <div class="navigation">
-          <div class="container"><a class="brand" href="index.html"><img class="brand-logo-dark" src="assets/images/logo-187x70.png" alt="" width="187" height="70" srcset="assets/images/logo-retina-374x140.png 2x"/></a>
+          <div class="container"><a class="brand" href="index.html"><img class="brand-logo-dark" src="./assets/images/logo_new.png" alt="" width="250" height="70" srcset="assets/images/logo_new.png 2x"/></a>
             <div class="swiper-pagination" data-index-bullet="true"></div>
             <ul class="list-inline">
               <li><a class="icon icon-xxs icon-gray icon-circle fa fa-facebook" href="#"></a></li>
@@ -115,25 +144,6 @@
           </div>
         </div>
       </section>
-      <div class="modal fade" id="modal-about-us" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="false">
-        <div class="modal-custom-inner">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="content-box">
-                <div class="container"> 
-                  <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 col-xl-6"><a class="close close-modal-content-box" href="#" data-dismiss="modal">x</a>
-                      <h3>A Few Words<br class="d-none d-md-inline-block"> About Us</h3>
-                      <p>Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae. Rat voleneni ullam corporis suscipit labasic ut aliquidea commodi consequatur. Aquis autem vel eum iure reprehenderit, muytasas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae.</p>
-                      <p>Rat voleneni ullam corporis suscipit labasic ut aliquidea commodi consequatur. Aquis autem vel eum iure reprehenderit. Asas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae. Rat voleneni ullam corporis suscipit labasic ut aliquidea commodi consequatur. Aquis autem vel eum iure reprehenderit, muytasas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempo. Asas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae. Rat voleneni ullam corporis suscipit labasic ut aliquidea</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="modal fade" id="single-event" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="false">
         <div class="modal-custom-inner">
           <div class="modal-dialog" role="document">
