--- a/home.html
+++ b/home.html
@@ -74,8 +74,8 @@
                           <div class="row justify-content-lg-center">
                             <div class="col-lg-8">
                               <div class="main-page-box">
-                                <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title" style="color: ;">About Tharang</span><span class="subheading-decor"></span></p>
-                                <h6  style="background-color:rgb(176, 87, 231); color: black; font-weight: 500;" data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">Tharang is a largest Techno Cultural Fest conducted annually by the students
+                                <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title" style="color: white; background-color: black;">About Tharang</span></p>
+                                <h6  style="background-color:black; color: white; font-weight: 500;" data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">Tharang is a largest Techno Cultural Fest conducted annually by the students
                                   of Jyothi Engineering College, Thrissur. Tharang, since its inception, has
                                   evolved into one of the biggest events for tech-wits and creative minds
                                   across the state. The new edition "Tharang 2022" is not different either. The
@@ -134,12 +134,10 @@
           <div class="container"><a class="brand" href="index.html"><img class="brand-logo-dark" src="./assets/images/logo_new.png" alt="" width="250" height="70" srcset="assets/images/logo_new.png 2x"/></a>
             <div class="swiper-pagination" data-index-bullet="true"></div>
             <ul class="list-inline">
-              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-facebook" href="#"></a></li>
-              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-twitter" href="#"></a></li>
-              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-google-plus" href="#"></a></li>
-              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-vimeo" href="#"></a></li>
-              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-youtube" href="#"></a></li>
-              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-pinterest" href="#"></a></li>
+              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-facebook" href="https://www.facebook.com/jecc.ac.in"></a></li>
+              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-twitter" href="https://twitter.com/jecctcr"></a></li>
+              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-instagram" href="https://instagram.com/tharangjyothi?igshid=YmMyMTA2M2Y="></a></li>
+              <li><a class="icon icon-xxs icon-gray icon-circle fa fa-youtube" href="https://youtube.com/c/JyothiEngineeringCollege"></a></li>
             </ul>
           </div>
         </div>
