--- a/home.html
+++ b/home.html
@@ -122,6 +122,88 @@
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-8">
                     <div class="row row-20 justify-content-center justify-content-lg-between align-items-center">
+                      <li class="l-section section team--section">
+                        <div class="team__heading--bg heading__primary">
+                            <h1></h1>
+                        </div>
+                        <div class="team__container">
+                            <div class="team__cards">
+                                <div class="sponsors-wrapper">
+                                    <h1 class="sponsors-main-title">
+                                        TEAM
+                                        <br><br>
+                                    </h1>
+                                </div>
+                                <div class="sponsors-wrapper">
+                                    <h2 class="sponsors-sub-title">
+                                        Faculty Coordinators
+                                    </h2>
+                                </div>
+                                <div class="team__row">
+                                    <div class="team__card">
+                                        <div class="team__card-img">
+                                            <!-- <img loading="lazy" src="" alt="Staff-1"> -->
+                                        </div>
+                                        <div class="team__card-details">
+                                            <h4>Ms. Ninu Francis</h4>
+                                            <h6>Main Coordinators</h6>
+                                        </div>
+                                    </div>
+                                    <div class="team__card">
+                                      <div class="team__card-img">
+                                          <!-- <img loading="lazy" src="https://i.ibb.co/s98c4tN/Ayushi-Panth.jpg"
+                                              alt=""> -->
+                                      </div>
+                                      <div class="team__card-details">
+                                          <h4>Mr. Christy V. Vazhappilly</h4>
+                                          <h6>Main Coordinators</h6>
+                                      </div>
+                                  </div>
+                                  <div class="team__card">
+                                      <div class="team__card-img">
+                                          <!-- <img loading="lazy" src="https://i.ibb.co/pRPcWGL/Niharika-Kabra.jpg"
+                                              alt=""> -->
+                                      </div>
+                                      <div class="team__card-details">
+                                          <h4>Mr. George C J</h4>
+                                          <h6>Main Coordinators</h6>
+                                      </div>
+                                  </div>
+
+                                </div>
+
+
+                                <div class="team__row">
+                                <div class="sponsors-wrapper">
+                                    <h2 class="sponsors-sub-title">
+                                        Student Committee
+                                    </h2>
+                                </div>
+                                <div class="team__row">
+                                    <div class="team__card">
+                                        <div class="team__card-img">
+                                            <!-- <img loading="lazy" src="https://i.ibb.co/M5sXFQF/Manasvi-Agrawal.jpg"
+                                                alt=""> -->
+                                        </div>
+                                        <div class="team__card-details">
+                                            <h4>Kiran Shelly</h4>
+                                            <h6>Mechanical</h6>
+                                        </div>
+                                    </div>
+                                    <div class="team__card">
+                                        <div class="team__card-img">
+                                            <!-- <img loading="lazy" src="https://i.ibb.co/THKkr8y/M-Asita.jpg" alt=""> -->
+                                        </div>
+                                        <div class="team__card-details">
+                                            <h4>Keerthi</h4>
+                                            <h6>EEE</h6>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                     </div>
                   </div>
                 </div>
@@ -142,71 +224,6 @@
           </div>
         </div>
       </section>
-      <div class="modal fade" id="single-event" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="false">
-        <div class="modal-custom-inner">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="content-box">
-                <div class="container"> 
-                  <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 col-xl-6"><a class="close close-modal-content-box" href="#" data-dismiss="modal">x</a>
-                      <h3>Single Event</h3>
-                      <p>Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae. Rat voleneni ullam corporis suscipit labasic ut aliquidea commodi consequatur. Aquis autem vel eum iure reprehenderit, muytasas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae.</p>
-                      <p>Rat voleneni ullam corporis suscipit labasic ut aliquidea commodi consequatur. Aquis autem vel eum iure reprehenderit. Asas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae. Rat voleneni ullam corporis suscipit labasic ut aliquidea commodi consequatur. Aquis autem vel eum iure reprehenderit, muytasas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempo. Asas dresasaser. Esse, quam nihil molestiae consequatur, vel illum. Dastqui dolorem ipsumquia dolsitmet conse tequam eius. Asmodi tempora incid. Dent ut labore t dolore magnam. Naliquam quae. Rat voleneni ullam corporis suscipit labasic ut aliquidea</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal fade" id="appointment" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="false">
-        <div class="modal-custom-inner">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="content-box">
-                <div class="container">
-                  <div class="row justify-content-center">
-                    <div class="col-10 col-lg-4"><a class="close close-modal-content-box" href="#" data-dismiss="modal">x</a>
-                      <h3>Contact Form</h3>
-                      <!-- RD Mailform-->
-                      <form class="rd-mailform text-left" data-form-output="form-output-global" data-form-type="contact" method="post" action="assets
-                /bat/rd-mailform.html">
-                        <div class="row row-20">
-                          <div class="col-12">
-                            <div class="form-wrap">
-                              <label class="form-label" for="contact-name">Name</label>
-                              <input class="form-input" id="contact-name" type="text" name="name" data-constraints="@Required">
-                            </div>
-                          </div>
-                          <div class="col-12">
-                            <div class="form-wrap">
-                              <label class="form-label" for="contact-email">E-Mail</label>
-                              <input class="form-input" id="contact-email" type="email" name="email" data-constraints="@Required @Email">
-                            </div>
-                          </div>
-                          <div class="col-12">
-                            <div class="form-wrap">
-                              <label class="form-label" for="contact-message">Message</label>
-                              <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required"></textarea>
-                            </div>
-                          </div>
-                          <div class="col-12">
-                            <div class="form-button group-sm text-center text-lg-left">
-                              <button class="button button-primary" type="submit">Send</button>
-                            </div>
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
     <!-- PANEL-->
     <!-- END PANEL-->
