--- a/home.html
+++ b/home.html
@@ -130,7 +130,7 @@
                             <div class="team__cards">
                                 <div class="sponsors-wrapper">
                                     <h1 class="sponsors-main-title">
-                                        TEAM
+                                        
                                         <br><br>
                                     </h1>
                                 </div>
@@ -176,7 +176,7 @@
                                 <div class="team__row">
                                 <div class="sponsors-wrapper">
                                     <h2 class="sponsors-sub-title">
-                                        Student Committee
+                                        Student Coordinators
                                     </h2>
                                 </div>
                                 <div class="team__row">
