--- a/home.html
+++ b/home.html
@@ -68,7 +68,21 @@
                         <div class="layer container-screen parallax-scene-img-height" data-depth="0.35"><img src="assets/images/download-03.png" alt=""></div>
                         <div class="layer container-screen parallax-scene-img-height" data-depth="0.15"><img src="assets/images/download-04.png" alt=""></div>
                         <div class="layer container-screen parallax-scene-img-height" data-depth="0.22"><img src="assets/images/download-05.png" alt=""></div>
-                      </div>
+                      </div><div class="swiper-slide-caption section-md">
+                        <div class="container">
+                          <div class="row justify-content-lg-center">
+                            <div class="col-lg-8">
+                              <div class="main-page-box">
+                                <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title" style="color: white; background-color: black;">About Jyothi</span></p>
+                                <h6  style="background-color:black; color: white; font-weight: 500;" data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">
+                               Jyothi Engineering College (JEC) set up in 2002, under the aegis of Thrissur Educational Trust, founded by the Catholic Archdiocese of Trichur, is a leading engineering college in Kerala. The Archdiocese of Trichur has an illustrious t
+                               rack record of a century and a quarter in the education sector. JEC is a NAAC accredited institution and Five of the UG programs offered have NBA accreditation, which indicates that we are well recognized 
+                               for the quality of education we offer. </h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>  
                       <div class="swiper-slide-caption section-md">
                         <div class="container">
                           <div class="row justify-content-lg-center">
@@ -142,27 +156,25 @@
                                 <div class="team__row">
                                     <div class="team__card">
                                         <div class="team__card-img">
-                                            <!-- <img loading="lazy" src="" alt="Staff-1"> -->
+                                            <img loading="lazy" src="./assets/images/CHRIST SIR.jpg" alt="Staff-1">
                                         </div>
-                                        <div class="team__card-details">
-                                            <h4>Ms. Ninu Francis</h4>
+                                        <div class="team__card-details" >
+                                            <h4>Mr. Christy V. Vazhappilly</h4>
                                             <h6>Main Coordinators</h6>
                                         </div>
                                     </div>
                                     <div class="team__card">
                                       <div class="team__card-img">
-                                          <!-- <img loading="lazy" src="https://i.ibb.co/s98c4tN/Ayushi-Panth.jpg"
-                                              alt=""> -->
+                                        <img loading="lazy" src="./assets/images/NINU FRANCIS.jpg" alt="Staff-1">
                                       </div>
                                       <div class="team__card-details">
-                                          <h4>Mr. Christy V. Vazhappilly</h4>
+                                          <h4> Ms. Ninu Franci</h4>
                                           <h6>Main Coordinators</h6>
                                       </div>
                                   </div>
                                   <div class="team__card">
                                       <div class="team__card-img">
-                                          <!-- <img loading="lazy" src="https://i.ibb.co/pRPcWGL/Niharika-Kabra.jpg"
-                                              alt=""> -->
+                                        <img loading="lazy" src="./assets/images/GEORGE SIR.jpg" alt="Staff-1">
                                       </div>
                                       <div class="team__card-details">
                                           <h4>Mr. George C J</h4>
@@ -182,8 +194,7 @@
                                 <div class="team__row">
                                     <div class="team__card">
                                         <div class="team__card-img">
-                                            <!-- <img loading="lazy" src="https://i.ibb.co/M5sXFQF/Manasvi-Agrawal.jpg"
-                                                alt=""> -->
+                                          <img loading="lazy" src="./assets/images/kiran shelly.jpg" alt="Staff-1">
                                         </div>
                                         <div class="team__card-details">
                                             <h4>Kiran Shelly</h4>
@@ -192,7 +203,7 @@
                                     </div>
                                     <div class="team__card">
                                         <div class="team__card-img">
-                                            <!-- <img loading="lazy" src="https://i.ibb.co/THKkr8y/M-Asita.jpg" alt=""> -->
+                                          <img loading="lazy" src="./assets/images/keerthi.jpg" alt="Staff-1">
                                         </div>
                                         <div class="team__card-details">
                                             <h4>Keerthi</h4>
