--- a/home.html
+++ b/home.html
@@ -70,37 +70,36 @@
                         <div class="layer container-screen parallax-scene-img-height" data-depth="0.22"><img src="assets/images/download-05.png" alt=""></div>
                       </div><div class="swiper-slide-caption section-md">
                         <div class="container">
-                          <div class="row justify-content-lg-center">
-                            <div class="col-lg-8">
-                              <div class="main-page-box">
-                                <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title" style="color: white; background-color: black;">About Jyothi</span></p>
-                                <h6  style="background-color:black; color: white; font-weight: 200; font-size:40px;" data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">
-                               Jyothi Engineering College (JEC) set up in 2002, under the aegis of Thrissur Educational Trust, founded by the Catholic Archdiocese of Trichur, is a leading engineering college in Kerala. The Archdiocese of Trichur has an illustrious t
-                               rack record of a century and a quarter in the education sector. JEC is a NAAC accredited institution and Five of the UG programs offered have NBA accreditation, which indicates that we are well recognized 
-                               for the quality of education we offer. </h6>
+                          <div class="row justify-content-center">
+                            <div class="col-12 col-lg-12">
+                              <div class="row row-20 justify-content-center justify-content-lg-between align-items-center">
+                                <div class="textBox">
+                                  <h1> About Jyothi</h1>
+                                  <hr>
+                                  <p>Jyothi Engineering College (JEC) set up in 2002, under the aegis of Thrissur Educational Trust, founded by the Catholic Archdiocese of Trichur, is a leading engineering college in Kerala. The Archdiocese of Trichur has an illustrious track record of a century and a quarter in the education sector. Jyothi Engineering College is a NAAC accredited institution and Five of the undergraduate programs offered have NBA accreditation, which indicates that we are well recognized for the quality of education we offer. <br>
+ 
+                                    Students of today require different sets of skills than those of previous generations. We are in the midst of the fourth industrial revolution and the predictions are that 85% of the jobs that will exist in 2030 have not been invented yet. JYOTHI hence prepares students to become T-Shaped professionals, i.e., professionals who have in-depth expertise in their discipline as well as a breadth of competencies required in the twenty-first century. In order to make our students “future ready”, we have set up an incubation centre, Integrated Industrial Incubation Centre (IIIC), in association with TATA Technologies.
+                                    In order to help students become “job creators” rather than “job seekers”, Jyothi Engineering College has also set up a Technology Business Incubator, JEC TBI, to create technology based new enterprises, foster an entrepreneurial spirit among students and commercialize R&D output. Additionally, Jyothi Engineering College offers a vibrant, beautiful, and green environmentally friendly campus, and excellent infrastructure for students, to aid the teaching and learning process.</p>
+                                <br>
+                                <h1> About Tharang
+                                </h1>    
+                                <hr>    
+                                <p>
+                                  Tharang is a largest Techno Cultural Fest conducted annually by the students
+of Jyothi Engineering College, Thrissur. Tharang, since its inception, has
+evolved into one of the biggest events for tech-wits and creative minds
+across the state. The new edition "Tharang 2022" is not different either. The
+fest brings together the latest in technology, automobiles, workshop,
+games, arts, dance and music, all inside a jam packed session of two days,
+april 29 & 30.
+                                </p>
+                                </div>
+                                
                               </div>
                             </div>
                           </div>
                         </div>
-                      </div>  
-                      <div class="swiper-slide-caption section-md">
-                        <div class="container">
-                          <div class="row justify-content-lg-center">
-                            <div class="col-lg-8">
-                              <div class="main-page-box">
-                                <p class="subheading" data-swiper-parallax="-6000" data-swiper-parallax-opacity="0"><span class="subheading-title" style="color: white; background-color: black;">About Tharang</span></p>
-                                <h6  style="background-color:black; color: white; font-weight: 200; font-size:40px;" data-swiper-parallax="-5000" data-swiper-parallax-opacity="0">Tharang is a largest Techno Cultural Fest conducted annually by the students
-                                  of Jyothi Engineering College, Thrissur. Tharang, since its inception, has
-                                  evolved into one of the biggest events for tech-wits and creative minds
-                                  across the state. The new edition "Tharang 2022" is not different either. The
-                                  fest brings together the latest in technology, automobiles, workshop,
-                                  games, arts, dance and music, all inside a jam packed session of two days,
-                                  april 29 & 30.</h6>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>  
+                      </div>
                     </div>
           <!--events-->
           <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Events&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
