--- a/home.html
+++ b/home.html
@@ -148,9 +148,9 @@ april 29 & 30.
                                     </h1>
                                 </div>
                                 <div class="sponsors-wrapper">
-                                    <h2 class="sponsors-sub-title">
+                                    <h3 class="sponsors-sub-title">
                                         Faculty Coordinators
-                                    </h2>
+                                    </h3>
                                 </div>
                                 <div class="team__row">
                                     <div class="team__card">
@@ -158,8 +158,8 @@ april 29 & 30.
                                             <img loading="lazy" src="./assets/images/CHRIST SIR.jpg" alt="Staff-1">
                                         </div>
                                         <div class="team__card-details" >
-                                            <h4>Mr. Christy V. Vazhappilly</h4>
-                                            <h6>Main Coordinators</h6>
+                                            <h8>Mr. Christy V. Vazhappilly</h8>
+                                            <h8>+91 9895638192</h8><h8>christyvv@jecc.ac.in</h8>
                                         </div>
                                     </div>
                                     <div class="team__card">
@@ -167,8 +167,7 @@ april 29 & 30.
                                         <img loading="lazy" src="./assets/images/NINU FRANCIS.jpg" alt="Staff-1">
                                       </div>
                                       <div class="team__card-details">
-                                          <h4> Ms. Ninu Franci</h4>
-                                          <h6>Main Coordinators</h6>
+                                          <h8> Ms. Ninu Francis</h8><h8>+91 9446045708</h8><h8>neenufrancis@jecc.ac.in</h8>
                                       </div>
                                   </div>
                                   <div class="team__card">
@@ -176,8 +175,7 @@ april 29 & 30.
                                         <img loading="lazy" src="./assets/images/GEORGE SIR.jpg" alt="Staff-1">
                                       </div>
                                       <div class="team__card-details">
-                                          <h4>Mr. George C J</h4>
-                                          <h6>Main Coordinators</h6>
+                                          <h8>Mr. George C J</h8><h8>georgecj@jecc.ac.in</h8>
                                       </div>
                                   </div>
 
@@ -186,9 +184,9 @@ april 29 & 30.
 
                                 <div class="team__row">
                                 <div class="sponsors-wrapper">
-                                    <h2 class="sponsors-sub-title">
+                                    <h3 class="sponsors-sub-title">
                                         Student Coordinators
-                                    </h2>
+                                    </h3>
                                 </div>
                                 <div class="team__row">
                                     <div class="team__card">
@@ -196,8 +194,9 @@ april 29 & 30.
                                           <img loading="lazy" src="./assets/images/kiran shelly.jpg" alt="Staff-1">
                                         </div>
                                         <div class="team__card-details">
-                                            <h4>Kiran Shelly</h4>
-                                            <h6>Mechanical</h6>
+                                            <h8>Kiran Shelly</h8>
+                                            <h8>+91 8113902445</h8>
+                                            <h8>kiran.me18@jecc.ac.in</h8>
                                         </div>
                                     </div>
                                     <div class="team__card">
@@ -205,8 +204,9 @@ april 29 & 30.
                                           <img loading="lazy" src="./assets/images/keerthi.jpg" alt="Staff-1">
                                         </div>
                                         <div class="team__card-details">
-                                            <h4>Keerthi</h4>
-                                            <h6>EEE</h6>
+                                            <h8>Keerthi</h8>
+                                            <h8>+91 8157803475</h8>
+                                              <h8>keerthi.ee18@jecc.ac.in</h8>
                                         </div>
                                     </div>
 
