--- a/home.html
+++ b/home.html
@@ -223,7 +223,7 @@ april 29 & 30.
         </div>
         <!-- Swiper Pagination-->
         <div class="navigation">
-          <div class="container"><a class="brand" href="index.html"><img class="brand-logo-dark" src="./assets/images/logo_new.png" alt="" width="250" height="70" srcset="assets/images/logo_new.png 2x"/></a>
+          <div class="container"><a class="brand" href="/"><img class="brand-logo-dark" src="./assets/images/logo_new.png" alt="" width="250" height="70" srcset="assets/images/logo_new.png 2x"/></a>
             <div class="swiper-pagination" data-index-bullet="true"></div>
             <ul class="list-inline">
               <li><a class="icon icon-xxs icon-gray icon-circle fa fa-facebook" href="https://www.facebook.com/jecc.ac.in"></a></li>
