--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@ april 29 & 30.
                       <source src="./assets/music/Tharang.m4v" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
-                    <a  href="https://theamalshibu.github.io/events-tharang/" ><button>Check Events</button></a>
+                    <a  href="https://events.tharang.jecc.ac.in" ><button>Check Events</button></a>
                   </div>
                 </div>
               </div>
